@@ -21,5 +21,5 @@ DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5
 DIST vmware-libcrypto.so.0.9.7l.tar.bz2 412159 RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 SHA1 f86c4cb076fe1764975e9243dc0fae763f2b589a SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12
 DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
 EBUILD vmware-player-1.0.5.56455.ebuild 2855 RMD160 0b4922a5df4493a636a04be38e606521608d5c23 SHA1 77f3b90a8d5e4d8aebc5939a4241bb190067b3ab SHA256 58ce3755c019e9b11505cefa64c2c675c66bf80ba5760ae3f92c5cde83c7d5ab
-EBUILD vmware-player-2.0.2.59824.ebuild 2981 RMD160 0190ad554d1d4ddd326278a82c15c0d6be2f5e96 SHA1 2694c0fde08891c245c8940c09ee165ef5fa56fd SHA256 5f6ed05dbb24b0eb1ad248db8c26c0db51bbf84c902fcfdc3268dd57b3d80552
+EBUILD vmware-player-2.0.2.59824.ebuild 3341 RMD160 f1f6ebea476c2686be925169e1c4a22879bc7ae3 SHA1 545114ac95031d0ac9ad101e80cde2498977a8c2 SHA256 735d5196dd8e399e9fbfdb340f3316a8561ed4cee806c6ac36896421662b6f35
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
