@@ -19,4 +19,4 @@ DIST VMware-workstation-6.0.2-59824.i386.tar.gz 219077421 RMD160 4e0f9aff3507cb3
 DIST VMware-workstation-6.0.2-59824.x86_64.tar.gz 196567485 RMD160 a7625f679b36d22f88f0b3d9d8c9e9f064015dc5 SHA1 5e014cdd5cf0d70cd4c78175ca7db5ce3c0fe9c0 SHA256 d656421e596f79fc872771ac63bd19c834c8ae98cb95a948bdf2090597393a95
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-workstation-5.5.5.56455.ebuild 3102 RMD160 a8323412796d4f6d2c97560d756693ed504a5f35 SHA1 4b9204ce3907913f40735d3ec81e4ce78f9adff2 SHA256 9b11fe8b5ee4cd5edc7b0e49a56a9da31019f0fc53f1cc2fca22da8d7dc38f5a
-EBUILD vmware-workstation-6.0.2.59824.ebuild 3697 RMD160 a3d65cadb47b92fd631563f3b2e86bf9f9a4d90c SHA1 b9ab6c5713416cf08d754f30307617167c7c2719 SHA256 8605b1fd003b77429912750456f73f99e5decd43de426826028169028bf9e161
+EBUILD vmware-workstation-6.0.2.59824.ebuild 3696 RMD160 bdafb06042366e4a05aeb76f6bb2ffef6244c050 SHA1 69df59dc870890cd2c0224a884eaabe52ef5cf0d SHA256 0366a3ba6a3ddea60fcc0f25adf8e014b41ac1c15e258e45e5b832e5321e950b
